--- a/index.html
+++ b/index.html
@@ -73,5 +73,35 @@
         </div>
       </div>
     </section>
+    <!-- Feature Section -->
+    <section id="feature">
+      <!-- Feature Main Container -->
+      <!-- 1. display: relative since a children container will absolute -->
+      <!-- 2. md:flex-row since image and text children will go side-by-side -->
+      <div
+        class="container relative mx-auto my-32 flex max-w-6xl flex-col px-6 text-gray-900 md:flex-row md:px-0"
+      >
+        <!-- Image -->
+        <img src="images/desktop/image-interactive.jpg" alt="" />
+        <!-- Text Container -->
+        <!-- 1. md:absolute to position this container relative to the Feature Main Container on larger screens -->
+        <!-- 2. md:right-0 and md:top-48 make this Text Container overlap with the image -->
+        <div
+          class="bg-white md:absolute md:right-0 md:top-48 md:py-20 md:pl-20"
+        >
+          <h2
+            class="mx-auto mt-10 mb-6 max-w-lg text-center font-sans text-4xl uppercase md:mt-0 md:text-left md:text-5xl"
+          >
+            The leader in interactive VR
+          </h2>
+          <p class="mx-auto max-w-md text-center md:mx-0 md:text-left">
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
