--- a/index.html
+++ b/index.html
@@ -323,5 +323,113 @@
         </div>
       </div>
     </section>
+    <!-- Footer Section -->
+    <footer class="bg-black">
+      <!-- Main Footer Container -->
+      <div class="container mx-auto max-w-6xl py-10">
+        <!-- Main Footer Flex Container -->
+        <!-- 1. two flex children: logo/links container, and social media/copyright container -->
+        <div
+          class="mb-8 flex flex-col items-center space-y-6 md:flex-row md:justify-between md:space-y-0"
+        >
+          <!-- Logo and Links Container -->
+          <div
+            class="flex flex-col items-center space-y-8 md:items-start md:space-y-4"
+          >
+            <!-- Logo Container -->
+            <div class="h-8">
+              <img src="images/logo.svg" alt="" class="w-44 md:ml-3" />
+            </div>
+            <!-- Links Container -->
+            <div
+              class="flex flex-col items-center space-y-4 font-bold text-white md:ml-3 md:flex-row md:space-y-0 md:space-x-6"
+            >
+              <!-- Link 1 Container -->
+              <div class="group h-10">
+                <!-- Anchor Link -->
+                <a href="#">About</a>
+                <!-- Border Bottom -->
+                <!-- 1. mx-2 to make the border bottom a little bit shorter than the anchor's width -->
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <!-- Link 2  Container -->
+              <div class="group h-10">
+                <a href="#">Careers</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <!-- Link 3 Container -->
+              <div class="group h-10">
+                <a href="#">Events</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <!-- Link 4 Container -->
+              <div class="group h-10">
+                <a href="#">Products</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <!-- Link 5 Container -->
+              <div class="group h-10">
+                <a href="#">Support</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <!-- Social Media and Copyright Container -->
+          <div
+            class="flex flex-col items-center justify-between space-y-4 text-gray-500 md:items-start"
+          >
+            <!-- Social Media Icons Container -->
+            <div
+              class="flex items-center justify-center space-x-4 md:justify-end"
+            >
+              <!-- Icon 1 Container -->
+              <div class="group h-8">
+                <!-- Social Media Link -->
+                <a href="#">
+                  <!-- Social Media Image -->
+                  <img
+                    src="images/icon-facebook.svg"
+                    alt=""
+                    class="ficon h-6 duration-200"
+                  />
+                </a>
+              </div>
+              <!-- Icon 2 Container -->
+              <div class="group h-8">
+                <a href="#">
+                  <img src="images/icon-twitter.svg" alt="" class="ficon h-6 duration-200" />
+                </a>
+              </div>
+              <!-- Icon 3 Container -->
+              <div class="group h-8">
+                <a href="#">
+                  <img src="images/icon-pinterest.svg" alt="" class="ficon h-6 duration-200" />
+                </a>
+              </div>
+              <!-- Icon 4 Container -->
+              <div class="group h-8">
+                <a href="#">
+                  <img src="images/icon-instagram.svg" alt="" class="ficon h-6 duration-200" />
+                </a>
+              </div>
+            </div>
+            <!-- Copyright Text -->
+            <div class="mr-3 font-bold">
+              &copy; 2022 Loopstudios. All Rights Reserved
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
